Chiamata ajax: stampo in console i 4 dati che mi interessano (prova)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
 
+  <input type="text" name="" value="" placeholder="Cerca...">
+  <button type="button">Vai!</button>
+
+
+
   <!-- SCRIPT -->
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="myscript.js">
   </script>
