--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <script id="film-template" type="text/x-handlebars-template">
     <div class="film">
       <ul>
-        <li><span>Titolo: </span><span class="info">{{title}}</span></li>
-        <li><span>Titolo originale: </span><span class="info">{{original_title}}</li>
-        <li><span>Lingua: </span><span class="info">{{original_language}}</span></li>
-        <li><span>Voto: </span><span class="info">{{vote_average}}</span></li>
+        <li><span class="title">Titolo: </span><span class="info">{{Titolo}}</span></li>
+        <li><span class="title">Titolo originale: </span><span class="info">{{Titolo_originale}}</li>
+        <li><span class="title">Lingua: </span><span class="info">{{Lingua}}</span></li>
+        <li><span class="title">Voto: </span><span class="info">{{Voto}}</span></li>
       </ul>
     </div>
   </script>
