Predispongo nel template il campo delle stelline

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><span class="title">Titolo originale: </span><span class="info">{{Titolo_originale}}</li>
         <li><span class="title">Lingua: </span><span class="info">{{Lingua}}</span></li>
         <li><span class="title">Voto: </span><span class="info">{{Voto}}</span></li>
+        <li><span class="info">{{{Stelle}}}</span></li>
       </ul>
     </div>
   </script>
