Stampo in pagina le bandiere

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul>
         <li><span class="title">Titolo: </span><span class="info">{{Titolo}}</span></li>
         <li><span class="title">Titolo originale: </span><span class="info">{{Titolo_originale}}</li>
-        <li><span class="title">Lingua: </span><span class="info">{{Lingua}}</span></li>
+        <li><span class="title">Lingua: </span><span class="info-lingua">{{{Lingua}}}</span></li>
         <li><span class="title">Voto: </span><span class="info">{{Voto}}</span></li>
         <li><span class="info">{{{Stelle}}}</span></li>
       </ul>
