--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <button type="button">Vai!</button>
   </header>
 
-  <div id="risultati">
+  <div id="risultati-film">
+
+  </div>
+
+  <div id="risultati-serietv">
 
   </div>
 
@@ -29,9 +33,9 @@
       <ul>
         <li><span class="title">Titolo: </span><span class="info">{{Titolo}}</span></li>
         <li><span class="title">Titolo originale: </span><span class="info">{{Titolo_originale}}</li>
-        <li><span class="title">Lingua: </span><span class="info-lingua">{{{Lingua}}}</span></li>
+        <li><span class="title">Lingua: </span><span class="info-lingua">{{Lingua}}</span></li>
         <li><span class="title">Voto: </span><span class="info">{{Voto}}</span></li>
-        <li><span class="info">{{{Stelle}}}</span></li>
+        <!-- <li><span class="info">{{{Stelle}}}</span></li> -->
       </ul>
     </div>
   </script>
