Riesco a stampare a schermo anche il tipo (movie o serietv?)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script id="film-template" type="text/x-handlebars-template">
     <div class="film">
       <ul>
+        <li><span class="title">Tipo: </span><span class="info">{{Tipo}}</span></li>
         <li><span class="title">Titolo: </span><span class="info">{{Titolo}}</span></li>
         <li><span class="title">Titolo originale: </span><span class="info">{{Titolo_originale}}</li>
         <li><span class="title">Lingua: </span><span class="info-lingua">{{Lingua}}</span></li>
