--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><span class="title">Tipo: </span><span class="info">{{tipo}}</span></li>
         <li><span class="title">Titolo: </span><span class="info">{{titolo}}</span></li>
         <li><span class="title">Titolo originale: </span><span class="info">{{titolo_originale}}</li>
-        <li><span class="title">Lingua: </span><span class="info-lingua">{{lingua}}</span></li>
+        <li><span class="title">Lingua: </span><span class="info-lingua">{{lingua}} - {{{bandiera}}}</span></li>
         <li><span class="title">Voto: </span><span class="info">{{voto}} - {{{stelle}}}</i></span></li>
       </ul>
     </div>
