Milestone 3: stampo i poster in pagina

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script id="template" type="text/x-handlebars-template">
     <div class="elemento">
       <ul>
+        <li><span class="info">{{{poster}}}</span></li>
         <li><span class="title">Tipo: </span><span class="info">{{tipo}}</span></li>
         <li><span class="title">Titolo: </span><span class="info">{{titolo}}</span></li>
         <li><span class="title">Titolo originale: </span><span class="info">{{titolo_originale}}</li>
