Separo i contenitori per l'output (tra movie e serietv)

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <button type="button">Vai!</button>
   </header>
 
-  <div id="risultati">
-
+  <div id="risultati-film">
   </div>
-
+  <div id="risultati-serietv">
+  </div>
 
 
 
