Se non trovo il poster stampo un'immagine di default

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
   <script id="template" type="text/x-handlebars-template">
     <div class="elemento">
+      <div><span class="info-poster">{{{poster}}}</div></li>
       <ul>
-        <li><span class="info">{{{poster}}}</span></li>
         <li><span class="info-tipo">{{tipo}}</span></li>
         <li><span class="title">Titolo: </span><span class="info">{{titolo}}</span></li>
         <li><span class="title">Titolo originale: </span><span class="info">{{titolo_originale}}</li>
