Aggiungo la trama

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Boolflix</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 
 <body>
 
@@ -14,8 +15,8 @@
         <h1>BOOLFLIX</h1>
       </div>
       <div id="input">
-        <input type="text" name="" value="" placeholder="Cerca...">
-        <button type="button">Vai!</button>
+        <input type="text" name="" value="" placeholder="Cosa vuoi guardare?">
+        <button type="button">CERCA</button>
       </div>
     </div>
   </header>
@@ -48,6 +49,7 @@
         <li><span class="title">Titolo originale: </span><span class="info">{{titolo_originale}}</li>
         <li><span class="title">Lingua: </span><span class="info-lingua">{{lingua}} - {{{bandiera}}}</span></li>
         <li><span class="title">Voto: </span><span class="info-voto">{{voto}} - {{{stelle}}}</i></span></li>
+        <li><span class="title">Trama: </span><span class="info-trama">{{trama}}</span></li>
       </ul>
     </div>
   </script>
