adeguo funzione di reset (ci sono nuovi div)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
   <main>
 
     <div id="main">
+      <div id="film">
+      </div>
       <div id="risultati-film">
+      </div>
+      <div id="serietv">
       </div>
       <div id="risultati-serietv">
       </div>
@@ -42,7 +46,7 @@
 
   <script id="template" type="text/x-handlebars-template">
     <div class="elemento">
-      <div><span class="info-poster">{{{poster}}}</div></li>
+      <div><span class="info-poster">{{{poster}}}</span></div></li>
       <ul>
         <li><span class="info-tipo">{{tipo}}</span></li>
         <li><span class="title">Titolo: </span><span class="info">{{titolo}}</span></li>
